--- a/public/resources/css/app.css
+++ b/public/resources/css/app.css
@@ -6,8 +6,13 @@ section{
 }
 
 .form-mensajes{
-    margin-top: 50px;
-    width: 600px;
+    /* margin-top: 50px;     */
+    /* width: 80%; */
+    max-width: 600px;
+    margin: 0 auto;    
+    display: flex;
+    flex-direction: column;
+    justify-content: center;    
 }
 
 h1{
@@ -27,4 +32,8 @@ footer{
 
 footer p{
     text-align: center;
+}
+
+tbody {
+    align-content: center;
 }
